# golf-swing-analyzer

./: .gitignore  CONTRIBUTING.md  plan.md  spec.md  tasks.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/golf_sim/: config.py  main.py  trc.py
backend/src/golf_sim/analysis/: cli.py  frame_of_reference.py  ideal_pose.py  metrics.py  p_positions.py  phases.py  quality.py  tips.py
backend/src/golf_sim/api/: runtime.py  server.py  sessions.py
backend/src/golf_sim/audio/: block.py  calibration.py  cli.py  devices.py  level.py  service.py  source.py  trigger.py
backend/src/golf_sim/capture/: buffer.py  cli.py  enumerate.py  extract.py  frame.py  resample.py  service.py  source.py  stream.py  sync_check.py  transcode.py  writer.py
backend/src/golf_sim/diagnostics/: camera_check.py  system_check.py
backend/src/golf_sim/pose/: board_detect.py  board_frames.py  board_image.py  calibrate.py  cli.py  estimate.py  project.py  reconstruct.py  rig_calibration.py  viewer.py  wizard.py
backend/tests/: conftest.py  test_analyze_p_positions.py  test_api.py  test_audio_service.py  test_board_frames.py  test_board_image.py  test_calibrate.py  test_calibration.py  test_camera_check.py  test_camera_rotation.py  test_capture.py  test_config.py  test_devices.py  test_hardening.py  test_ideal_pose.py  test_level.py  test_metrics.py  test_p_positions.py  test_pose_project.py  test_quality.py  test_reconstruct_backend.py  test_resample.py  test_rig_calibration.py  test_smoke.py  test_sync_check.py  test_system_check.py  test_tips.py  test_transcode.py  test_trigger.py  test_viewer.py
config/: config.yaml
docs/: ball-tracking-plan.md  setup.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/electron/: main.js  preload.js
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: ArmControl.tsx  CalibrationWizard.tsx  LivePreview.tsx  PPositionPanel.tsx  SessionView.tsx  Settings.tsx  Skeleton3D.tsx  SkeletonCanvas.tsx  SystemCheck.tsx
