[project]
name = "golf-sim"
version = "0.1.0"
description = "Audio-triggered dual-camera capture and 3D swing pose analysis backend"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "sounddevice>=0.4.6",
    # stable-by-name camera selection on Windows (DSHOW indices shuffle)
    "pygrabber>=0.2",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # PC spec check (CPU/RAM) -- diagnostics/system_check.py
    "psutil>=5.9",
    # Bundled ffmpeg binary for H.264 transcoding (capture/transcode.py).
    # OpenCV can only write mp4v (MPEG-4 Part 2), which Chromium/Electron
    # cannot decode -- clips played as a black frame in the UI until
    # transcoded. opencv-python has no H.264 encoder (needs a separately
    # downloaded OpenH264 DLL), so a bundled ffmpeg is the reliable path.
    "imageio-ffmpeg>=0.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "pytest>=8.0",
    # golf_sim.pose.viewer's real dependency; kept out of base deps so the
    # capture/audio services stay lean, but needed to run the test suite.
    "matplotlib>=3.8",
    # fastapi.testclient's transport
    "httpx>=0.27",
    # verifies our Calib.toml writer against the same TOML parser Pose2Sim
    # uses to read it -- otherwise only a transitive dep of the pose extra
    "rtoml>=0.9",
]
# 2D pose + camera calibration + 3D triangulation (Phase 3/4). Not needed until
# then — kept as its own extra so Phase 0-2 setup doesn't pull in its ML stack.
pose = [
    "pose2sim>=0.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
